<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:progress="50"
            android:max="100"
            android:layout_marginBottom="12dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnAddExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnAchievements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_achievements"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_list"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewExpenses"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            />

    </LinearLayout>
</ScrollView>
